# hapax-council

./: .coderabbit.yaml  .dockerignore  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .semgrepignore  .vale.ini  .zenodo.json  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  NOTICE.md  README.md  SECURITY.md  START_HERE.md  SUPPORT.md  codecov.yml  codemeta.json  conftest.py  darkplaces-state-export.py  experiment-freeze-manifest.txt  experiment-phase.json  generate-aoa-mdl.py  generate-screwm-map.py  generate-screwm-wad.py  iota-status.yaml  payload-heredoc-control.json  payload-heredoc.json  payload_case.json  payload_control.json  probe.py  probe2.py  probe3.py  probe_hostile.py  process-compose.yaml  (+6 more)
.agents/: settings.json
.github/: CODEOWNERS  FUNDING.yml  actionlint.yaml  dependabot.yml  pr-admission-state.yaml  pull_request_template.md
agents/: _active_correction.py  _affordance.py  _affordance_metrics.py  _affordance_pipeline.py  _apperception.py  _apperception_tick.py  _axiom_registry.py  _axiom_tools.py  _browser_services.py  _circuit_breaker.py  _config.py  _correction_memory.py  _expression.py  _frontmatter.py  _governance.py  _gpu_semaphore.py  _health_history.py  _impingement.py  _knowledge_search.py  _langfuse_config.py  _langfuse_local.py  _log_setup.py  _notify.py  _operator.py  _sdlc_status.py  _sensor_protocol.py  _service_tiers.py  _stimmung.py  _sufficiency_probes.py  _telemetry.py  _threshold_tuner.py  _vault_writer.py  _working_mode.py  activity_analyzer.py  alignment_tax_meter.py  audience_perception.py  audio_processor.py  av_correlator.py  briefing.py  broadcast_boundary_public_event_producer.py  (+77 more)
audits/: SCHEMA.md  template-tier-2.yaml
axioms/: README.md  anti_personification_allowlist.yaml  constitutive-rules.yaml  enforcement-exceptions.yaml  enforcement-patterns.yaml  registry.yaml
config/: adapter-tranche-selection-memo.json  aperture-registry-fixtures.json  application-obligation-refusal-fixtures.json  archive-replay-public-event-fixtures.json  archive-replay-sidecar-index-fixtures.json  audio-conf-allowlist.yaml  audio-conf-ownership.yaml  audio-current-capsule.yaml  audio-graph.yaml  audio-marker-probe-fixtures.json  audio-param-bridge-schema.yaml  audio-reactivity-runtime-witness-fixtures.json  audio-routing.yaml  audio-stage-expected-levels.yaml  audio-topology.yaml  audio-world-surface-fixtures.json  autoexec.cfg  autonomous-grounding-value-streams.json  bayesian-camera-salience-world-surface-fixtures.json  bitchx-acid-enlightenment.json  capability-classification-inventory.json  capability-inventory-baseline.json  capability-outcome-fixtures.json  capability-surface-delta-fixtures.json  caption-routing.yaml  cbip-calibration.yaml  chronicle.env  cold-contact-candidates.yaml  compositor-zones.yaml  compression-surface-registry.yaml  conative-impingement-fixtures.json  content-candidate-discovery-daemon.json  content-format-source-pool-rights-ledger.json  content-programme-feedback-ledger.json  content-programme-run-envelope-fixtures.json  content-programme-scheduler-policy.json  conversion-target-readiness-threshold-matrix.json  dead-service-allowlist.yaml  director-scrim-gesture-adapter-fixtures.json  director-world-surface-snapshot-fixtures.json  (+72 more)
council-web/: CLAUDE.md  README.md
data/: assertions-seed-corpus.jsonl
docker/: Dockerfile.logos-api  Dockerfile.sync-pipeline  docker-compose.yml
docs/: audio-topology-reference.md  compendium.md  first-run.md  homage-migration-principles.md  logos-design-language.md  logos-ui-reference.md  officium-design-language.md  rag-corpus-baseline.md  routing-ontology-reference.md  visual-layer-research.md
evidence/: CASE-AVSDLC-CUTOVER-20260623.md  CASE-AVSDLC-ENFORCEMENT-20260621.md  CASE-AVSDLC-INTENT-GATE-20260622.md  CASE-AVSDLC-REALIZED-VECTOR-20260622.md  CASE-AVSDLC-VISUAL-EVAL-20260621.md  CASE-AVSDLC-VISUAL-INTENT-20260622.md  CASE-EVIDENCE-ADMISSION-20260521.md  CASE-INTERVIEW-SEGMENT-SYSTEM-20260518.md  CASE-NARRATIVE-ARC-AWARENESS-20260519.md  CASE-SYNTHESIZED-PURVIEW-20260623.md  CASE-VOICE-PIPELINE-REPAIR-20260517.md  authority-case-ledger.jsonl
experiments/slint-logos-spike/: Cargo.toml  README.md
experiments/slint-logos-spike/src/: main.rs
experiments/slint-logos-spike/ui/: app.slint
gst-plugin-glfeedback/: Cargo.toml
hapax/: __init__.py
hapax-logos/: .gitignore  README.md  eslint.config.js  justfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
hapax-logos/crates/hapax-visual/: Cargo.toml
hapax-logos/crates/hapax-visual/shaders/: screwm_drift_field.wgsl
hapax-logos/crates/hapax-visual/src/: aoa_panes.rs  compositor.rs  content_layer.rs  content_sources.rs  control.rs  dynamic_pipeline.rs  effect_drift.rs  gpu.rs  lib.rs  media_drift.rs  output.rs  postprocess.rs  scene.rs  scene_renderer.rs  state.rs  transient_pool.rs  uniform_buffer.rs  v4l2_output.rs
hapax-logos/crates/hapax-visual/src/shaders/: content_layer.wgsl  entity_restore.wgsl  fullscreen_blit.wgsl  fullscreen_quad.wgsl  scene_dof.wgsl  scene_grid.wgsl  scene_quad.wgsl
hapax-logos/crates/hapax-visual/src/techniques/: feedback.rs  gradient.rs  physarum.rs  reaction_diff.rs  voronoi.rs  wave.rs
hapax_bar/: __main__.py  app.py  bar.py  bedrock.py  horizon.py  logos_client.py  palette.py  reactive.py  socket_server.py  stimmung.py  stimmung_strip.py  theme.py
hooks/: gate-manifest.yaml
logos/: __main__.py  _affordance.py  _affordance_metrics.py  _affordance_pipeline.py  _axiom_tools.py  _config.py  _frontmatter.py  _governance.py  _impingement.py  _ir_models.py  _notify.py  _operator.py  _ops_db.py  _profile_store.py  _telemetry.py  _working_mode.py  accommodations.py  chat_agent.py  chat_helpers.py  copilot.py  event_bus.py  formatters.py  interview.py  manual.py  micro_probes.py  (+3 more)
plugins/gst-crossfade/: Cargo.toml
plugins/gst-crossfade/src/: crossfade.rs  lib.rs
plugins/gst-smooth-delay/: Cargo.toml
plugins/gst-smooth-delay/src/: delay.rs  lib.rs
plugins/gst-temporalfx/: Cargo.toml
(+7315 files in other folders)
