[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["agents", "logos", "shared"]

[project]
name = "hapax-council"
version = "0.3.7"
description = "Single-operator Hapax operating-environment runtime and research infrastructure"
readme = "README.md"
license = {text = "PolyForm-Strict-1.0.0"}
requires-python = ">=3.12"
dependencies = [
    # Python-prod dependency caps and optional runtime surfaces are guarded by:
    # uv run pytest tests/test_python_prod_dependency_constraints.py -q
    # Core: shared by all agents and containers
    "httpx>=0.28.0",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pydantic-ai>=1.99.0,<2",
    "pyyaml>=6.0",
    "qdrant-client>=1.18.0",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "opentelemetry-exporter-otlp-proto-http>=1.39.0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-instrumentation-logging>=0.50b0",
    "python-json-logger>=3.3.0,<4",
    "openwakeword>=0.4.0",
    "litellm>=1.90.3",
    "kokoro>=0.9",
    "chatterbox-tts",
    # torchvision must move in lockstep with torch (0.25.x <-> torch 2.10.x).
    # The torch>=2.10,<2.11 override in [tool.uv] erases torchvision's own exact
    # torch pin during resolution, so this floor is what keeps the pair
    # ABI-matched. Bump together with the torch override.
    # Recheck: uv run pytest tests/test_python_prod_dependency_constraints.py -q
    "torchvision>=0.25,<0.26",
    "mistralai>=2.5.2",
    "python-toon>=0.1.3",
    "model2vec>=0.8.2",
    "uvloop>=0.21.0",
    "pillow>=12.3.0",
    "evdev>=1.9.3",
    "pygobject>=3.56.3",
    "pycairo>=1.29.0",
    "moderngl>=5.12.0",
    "pyte>=0.8.2",
    "fastapi>=0.139.0",
    "werkzeug>=3.1.8",
    "opencv-python-headless>=4.13.0.92,<5",
    "chat-downloader>=0.2.8",
    "sdnotify>=0.3.2",
    "imagehash>=4.3.2",
    "pytesseract>=0.3.13",
    "scikit-image>=0.26.0",
    "soundcloud-lib>=0.6.1",
    "google-cloud-monitoring>=2.31.0",
    "atproto>=0.0.65",
    "mastodon-py>=2.2.1",
    "mcp>=1.28.1",
    "hapax-agentgov",
]

[project.optional-dependencies]
logos-api = [
    "fastapi>=0.139.0",
    "jinja2>=3.1",
    "langfuse>=3.14.5,<4",
    "sse-starlette>=2.0.0,<3",
    "uvicorn>=0.49.0",
    "watchdog>=6.0.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]
sync-pipeline = [
    "google-api-python-client>=2.198.0",
    "google-auth-oauthlib>=1.4.0",
    "langfuse>=3.14.5,<4",
]
mail-monitor = [
    # cc-tasks mail-monitor-002 / -004 / -005 — gmail.modify-scoped
    # OAuth client + label/filter bootstrap + Pub/Sub watch + renewal
    # consumer. Same Google deps as sync-pipeline plus pubsub, kept as a
    # separate extra so a daemon-only install can skip langfuse.
    "google-api-python-client>=2.198.0",
    "google-auth>=2.55.1",
    "google-auth-oauthlib>=1.4.0",
    "google-cloud-pubsub>=2.39.0",
]
audio = [
    "faster-whisper>=1.1.0",
    "mediapipe>=0.10.35",
    "opencv-python-headless>=4.10.0,<5",
    "panns-inference>=0.1.1",
    "pipecat-ai[silero,openai]>=1.4.0",
    # pyannote 3.x imports torchaudio.AudioMetaData, which torchaudio >=2.9
    # removed — 3.4.0 is import-broken under the cu128 keystone stack. 4.x
    # is torchcodec-native (declares torchcodec>=0.7.0 itself).
    "pyannote-audio>=4.0.7",
    # 2026-04-23 Gemini-audit Phase 5 — pyannote-audio loads its
    # pretrained models via hydra/omegaconf and does NOT list omegaconf
    # as a hard dependency in the 3.x line. Without this explicit pin,
    # ``Model.from_pretrained("pyannote/embedding")`` raises
    # ``ModuleNotFoundError: No module named 'omegaconf'`` during
    # speaker-ID startup in hapax-daimonion and the feature silently
    # degrades.
    "omegaconf>=2.3.1",
    "pvporcupine>=4.0.3",
    "pyaudio>=0.2.14",
    "silero-vad>=5.1",
    "sounddevice>=0.5.0",
    "soundfile>=0.14.0",
    "torchaudio>=2.0.0",
    # torchaudio >=2.9 removed its built-in I/O backends: torchaudio.load/
    # save/info now require torchcodec (used by agents/audio_processor.py,
    # shared/beat_tracker.py, shared/clap.py, scripts/train_wake_word.py).
    # torchcodec releases pair exactly with torch minors (0.10 <-> torch
    # 2.10 — see the README compatibility table; mismatches fail at import
    # with `undefined symbol: torch_from_blob`). The torch>=2.10,<2.11 override in
    # [tool.uv] erases any torch coupling during resolution, so this pin is
    # what keeps the pair matched. Bump together with the torch override.
    # Runtime needs FFmpeg 4-8 shared libs on the host (appendix: n8.1.1).
    "torchcodec==0.10.*",
    "mido>=1.3.0",
    "python-rtmidi>=1.5.0",
    "obsws-python>=1.7.0",
    "hsemotion-onnx>=0.3",
    "praat-parselmouth>=0.4.5",
    "essentia>=2.1b6.dev1091,<=2.1b6.dev1389",
    # laion-clap: install separately — pins numpy<2.0.0 which conflicts with qdrant-client on 3.14
    #   uv pip install 'laion-clap>=1.1.6' --no-deps
    #   uv pip install transformers ftfy h5py braceexpand webdataset wget --no-deps
    # beat_this: install separately — GPU model with version conflicts
    #   uv pip install 'beat_this' --no-deps
    # olaf: build from source (https://github.com/JorenSix/Olaf) — no pip package
    # openwakeword: install separately — tflite-runtime requires Python <=3.11
    # nemo_toolkit[asr]: install separately via `uv pip install 'nemo_toolkit[asr]' 'lightning==2.4.0' --force-reinstall --no-deps`
    #   - nemo_toolkit pins transformers<4.58 which caps huggingface-hub<1.0
    #   - pydantic-ai requires huggingface-hub>=1.3.4
    #   - These are irreconcilable until transformers 5.x drops the hf-hub cap
    #   - lightning<=2.4.0 is now nemo's OWN upstream cap (nemo>=2.7 declares
    #     it on every extra), so the explicit ==2.4.0 merely mirrors upstream
    #     because --no-deps skips nemo's resolution. The historical rationale
    #     ("nv-one-logger crashes with >=2.5") is superseded by the upstream
    #     cap. Note this downgrades the locked lightning (pyannote rides
    #     2.6.x in uv.lock) inside the live venv only.
    #   - After install, force pin: uv pip install 'lightning==2.4.0' --force-reinstall --no-deps
    #   - Use .venv/bin/python (not `uv run`) to avoid re-sync breaking the pin
    #   - 2026-06-10 cu128 keystone (CASE-VOICE-FOUNDATION-20260610): verified
    #     nemo 2.7.3 + lightning 2.4.0 + torch 2.10.0+cu128 imports
    #     nemo.collections.asr cleanly — NeMo streaming ASR rides this bump.
]
ci = [
    # CI testing — everything except hardware-only audio deps
    "hapax-council[logos-api]",
    "hapax-council[sync-pipeline]",
    "hapax-council[mail-monitor]",
    "google-genai>=1.0.0",
    "matplotlib>=3.11.0",
    "moviepy>=2.0.0",
    "pillow>=12.3.0",
    "playwright>=1.61.0",
    "rdflib>=7.6.0",
    "watchdog>=6.0.0",
    "pytest-xdist>=3.6.0",
    # PR2 of CI/CD speedup cascade (docs/research/2026-04-26-cicd-speedup.md
    # §2 #1) — pyrefly replaces pyright in the typecheck job. ~15–18×
    # faster than pyright on Django/numpy benchmarks; council's
    # pyrightconfig.json already disables 12 reports so the 90% vs 99%
    # typing-spec conformance gap is mostly moot. pyright kept in
    # [dependency-groups] dev for local IDE use + weekly
    # .github/workflows/pyright-safety-net.yml coverage.
    "pyrefly>=0.62,<1",
    "vulture>=2.16",
]
studio = [
    "pyudev>=0.24.3",
    "ultralytics>=8.4.87",
]
tui = [
    "textual>=3.0,<4",
]
host = [
    # Everything — for local development on the host machine
    "hapax-council[ci]",
    "hapax-council[audio]",
    "hapax-council[studio]",
    "hapax-council[tui]",
]
rerank = [
    "sentence-transformers>=5.6.0",
]

[project.scripts]
logos = "logos.__main__:main"
logos-api = "logos.api.__main__:main"

[dependency-groups]
dev = [
    "hypothesis>=6.100.0",
    "pyright>=1.1.400",
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
    "vulture>=2.16",
    "pytest-benchmark>=5.2.3",
    "schemathesis>=4.7",
    "prometheus-client>=0.24.1",
    "rdflib>=7.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not llm and not contract and not e2e and not revocation_drill'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "hardware: marks tests needing real hardware (deselect with '-m \"not hardware\"')",
    "llm: tests requiring live LLM access via LiteLLM (deselect with '-m \"not llm\"')",
    "research: tests for experiment/grounding research infrastructure (deselect with '-m \"not research\"')",
    "contract: boundary contract tests requiring full app + services (run with '-m contract')",
    "e2e: end-to-end tests requiring live services + browser (run with '-m e2e')",
    "revocation_drill: DESTRUCTIVE — actually revokes the operator's mail-monitor OAuth token. Run with '-m revocation_drill' only on explicit operator intent; manual re-bootstrap is required after. Default-deselected.",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]
constraint-dependencies = [
    "authlib>=1.6.9",
    "fastmcp>=3.2.0",
    "mako>=1.3.12",
    "onnx>=1.21.0",
    "pyasn1>=0.6.3",
    "pyjwt>=2.12.0",
    "python-multipart>=0.0.27",
    "urllib3>=2.7.0",
]
override-dependencies = [
    "numpy>=2.0.0",
    # CASE-VOICE-FOUNDATION-20260610 keystone: chatterbox-tts pins
    # torch==2.6.0/torchaudio==2.6.0 for python<3.14, but the cu124-built
    # 2.6.0 PyPI wheels ship no sm_120 kernels — Chatterbox can never load
    # on the 5060 Ti (RTX 50-series) without torch>=2.10,<2.11. PyPI torch>=2.10,<2.11
    # wheels are built against CUDA 12.8 (sm_120 included). Upstream master
    # still carries the ==2.6.0 pin, so this override is load-bearing until
    # resemble-ai/chatterbox relaxes it for python<3.14.
    "torch>=2.10,<2.11",
    "torchaudio>=2.10,<2.11",
    # chatterbox-tts 0.1.7 pins diffusers==0.29.0, which is below the
    # patched floor for GHSA-98h9-4798-4q5v / CVE-2026-44513.
    "diffusers>=0.38.0",
    # The patched diffusers floor requires newer safetensors than the same
    # chatterbox-tts release declares.
    "safetensors>=0.8.0rc0",
    # moviepy 2.2.1 still declares pillow<12, but the patched Pillow floor is
    # required for the high-severity Dependabot alerts covered by this task.
    "pillow>=12.3.0",
    # atproto 0.0.69 still declares cryptography<47 even though the APIs used
    # by the Bluesky publisher are compatible with the patched cryptography
    # floor. Keep this override until atproto relaxes its bound upstream.
    "cryptography>=48.0.1",
    # Chatterbox 0.1.7 pins Gradio 6.8.0, and older metrics/gradio releases pin
    # Starlette below the patched 1.3.1 floor. These upstream releases support
    # Starlette 1.x and clear the Starlette alert set.
    "gradio>=6.19.0",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "starlette>=1.3.1",
]

[tool.uv.sources]
hapax-agentgov = { path = "packages/agentgov", editable = true }
chatterbox-tts = { git = "https://github.com/resemble-ai/chatterbox.git" }
