[package]
name = "slint-logos-spike"
version = "0.1.0"
edition = "2024"
build = "build.rs"
publish = false

[dependencies]
reqwest = { version = "0.13.3", default-features = false }
slint = "1.16.1"
tokio = { version = "1.52.2", features = ["net", "rt", "time"] }

[build-dependencies]
slint-build = "1.16.1"
