[package]
name = "gst-crossfade"
version = "0.1.0"
edition = "2021"
description = "GStreamer GL crossfade filter — smooth preset transitions via snapshot blending"

[lib]
name = "gstcrossfade"
crate-type = ["cdylib"]

[dependencies]
glib = "0.20"
gstreamer = "0.23"
gstreamer-base = "0.23"
gstreamer-video = "0.23"
gstreamer-gl = "0.23"
once_cell = "1"

[build-dependencies]
gl_generator = "0.14"
