[package]
name = "gst-smooth-delay"
version = "0.1.0"
edition = "2021"
description = "GStreamer GL smooth delay filter — GL texture ring buffer for temporal offset"

[lib]
name = "gstsmoothdelay"
crate-type = ["cdylib"]

[dependencies]
glib = "0.22"
gstreamer = "0.25"
gstreamer-base = "0.25"
gstreamer-video = "0.25"
gstreamer-gl = "0.25"
once_cell = "1"

[build-dependencies]
gl_generator = "0.14"
