[package]
name = "hapax-visual"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "30"
# LRR Phase 0 item 4 / FINDING-Q step 2 — naga static parser used to validate
# WGSL shaders BEFORE the wgpu hot-reload swap. Same major version as wgpu
# so the naga the compositor parses with is the same one wgpu will use
# internally for compilation. This sidesteps the wgpu panic risk on
# invalid WGSL.
naga = "30"
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
blake2 = "0.10"
glam = "0.33"
notify = "8"
pollster = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
turbojpeg = "1"
libc = "0.2"
# screwm_ward_atlas: pure-Rust Px437 glyph rasterizer for the baked no-AA atlas
# (Cairo→GPU ward-atlas port). Coverage thresholded 0/255 to match ANTIALIAS_NONE.
fontdue = "0.9"

[dev-dependencies]
tempfile = "3"
